// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/WithSidebar Basic 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  width: 100%;
  height: 100%;
}

.c1 {
  background-color: hsl(210,20%,97%);
  border-right: 1px solid hsl(210,12%,80%);
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
}

.c2 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  overflow: auto;
}

<div
  style={
    Object {
      "height": "100vh",
    }
  }
>
  <div
    className="c0"
  >
    <div
      className="c1"
    >
      <h1>
        hello
      </h1>
    </div>
    <div
      className="c2"
    >
      Main app content
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/WithSidebar With Column Nav 1`] = `
.c3 {
  position: relative;
}

.c4 {
  padding: 8px 20px;
  cursor: pointer;
  font-size: 12px;
  position: relative;
  z-index: 1;
}

.c4:hover {
  color: hsl(210,55%,55%);
}

.c5 {
  width: 100%;
  height: 100%;
  position: absolute;
  left: 0;
  top: 0;
  background-color: #ffffb3;
}

.c2 {
  list-style-type: none;
  padding: 0;
  margin: 0;
  position: relative;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  width: 100%;
  height: 100%;
}

.c1 {
  background-color: hsl(210,20%,97%);
  border-right: 1px solid hsl(210,12%,80%);
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
}

.c6 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  overflow: auto;
}

<div
  style={
    Object {
      "height": "100vh",
    }
  }
>
  <div
    className="c0"
  >
    <div
      className="c1"
    >
      <nav>
        <ul
          className="c2"
        >
          <li
            className="c3"
          >
            <div
              className="c4"
            >
              Item 1
            </div>
          </li>
          <li
            className="c3"
          >
            <div
              className="c4"
            >
              Item 2
            </div>
          </li>
          <li
            className="c3"
            selected={true}
          >
            <div
              className="c4"
            >
              Item 3 (active)
            </div>
            <div
              className="c5"
              layoutId="highlight"
            />
          </li>
          <li
            className="c3"
          >
            <div
              className="c4"
            >
              Item 4
            </div>
          </li>
        </ul>
      </nav>
    </div>
    <div
      className="c6"
    >
      Main app content
    </div>
  </div>
</div>
`;
